src/styles/components/navigation.scss
@import "../imports";

nav {
  display: block;
  position: absolute;
  top: 2rem;
  left: 2rem;
  z-index: 10;

  .navigation {
    .nav_button {
      @include width-height($width: 3rem, $height: 3.5rem);
      position: relative;
      @include transform(rotate(0deg));
      @include transition($time-in: 0.5s);
      cursor: pointer;

      &:hover span {
        @include hoverBrighten();
      }

      span {
        @include width-height($width: 50%, $height: 0.25rem);
        display: block;
        position: absolute;
        background-color: $peru;
        opacity: 1;
        @include transform(rotate(0deg));
        @include transition($time-in: 0.25s);

        &:nth-child(even) {
          left: 50%;
          border-radius: 0 0.25rem 0.25rem 0;
        }

        &:nth-child(odd) {
          left: 0;
          border-radius: 0.25rem 0 0 0.25rem;
        }

        &:nth-child(1),
        &:nth-child(2) {
          top: 0;
        }
        &:nth-child(3),
        &:nth-child(4) {
          top: 0.7rem;
        }
        &:nth-child(5),
        &:nth-child(6) {
          top: 1.4rem;
        }
      }

      &.true {
        span {
          &:nth-child(1),
          &:nth-child(6) {
            @include transform(rotate(45deg));
          }
          &:nth-child(2),
          &:nth-child(5) {
            @include transform(rotate(-45deg));
          }
          &:nth-child(1) {
            left: 5px;
            top: 7px;
          }
          &:nth-child(2) {
            left: calc(50% - 5px);
            top: 7px;
          }
          &:nth-child(3) {
            left: -50%;
            opacity: 0;
          }
          &:nth-child(4) {
            left: 100%;
            opacity: 0;
          }
          &:nth-child(5) {
            left: 5px;
            top: 22px;
          }
          &:nth-child(6) {
            left: calc(50% - 5px);
            opacity: 29px;
          }
        }
      }
    }

    .nav_menu {
      @include flex($direction: row);
      @include transition($time-in: 0.25s, $time-out: 0.25s);
      position: absolute;
      top: 0;
      left: 4rem;
      opacity: 0;
    }

    &.true .nav_menu {
      opacity: 1;

      .link_button i {
        display: none;
      }

      .link_button:hover {
        a:before {
          left: 12px;
        }

        &:nth-child(1) a:before,
        &:nth-child(2) a:before {
          @include width-height($width: 60px, $height: 2px);
        }
        &:nth-child(3) a:before {
          @include width-height($width: 50px, $height: 2px);
        }
        &:nth-child(4) a:before {
          @include width-height($width: 75px, $height: 2px);
        }
      }
    }
  }
}

.background_3 nav .navigation {
  .nav_button span {
    background-color: $maroon !important;
  }

  .nav_menu .link_button {
    a {
      @include box-shadow(0px, 8px, 16px, rgba(0, 0, 0, 0.6));
      background-color: #010e17;
      backdrop-filter: blur(6px) brightness(130%); 
      margin-top: -5px;
      padding: 5px 10px;
  
      &::before {
        margin-top: 2.4rem;
        margin-left: -12px;
      }
    }
    &:nth-child(1) a:before,
    &:nth-child(2) a:before {
      width: 80px !important;
    }
    &:nth-child(3) a:before {
      width: 71px !important;
    }
    &:nth-child(4) a:before {
      width: 98px !important;
    }
  }
}

